--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@vis.gl/react-google-maps": "^0.8.2",
     "axios": "^1.6.8",
+    "d3-scale": "^4.0.2",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/d3-scale": "^4.0.8",
     "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
